--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -38,6 +38,7 @@ test:
   commands:
     - bash -c "compgen -c spark && compgen -c pyspark"  # [not win]
     - where *spark*                                     # [win]
+    - pip check
   imports:
     - pyspark
     - pyspark.ml
@@ -48,6 +49,8 @@ test:
     - pyspark.mllib.stat
     - pyspark.sql
     - pyspark.streaming
+  requires:
+    - pip
 
 about:
   home: https://spark.apache.org/
